fix article overflow

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -175,18 +175,19 @@ body > footer {
 		}
 
 	.basic-article article {
-		position: absolute;
-		bottom: 15%;
+		position: relative;
 		width: calc( 90vh + 10vw );
 		max-width: calc( 89% - 15px );
 		background-color: var( --bg-light-color );
-		transform: translateY( 100% );
+		transform: translateY( -8vh );
 		padding: 30px calc( 5px + 3% );
+		margin-bottom: -8vh; /* to balance the Y translate */
 	}
 
 	@media screen and (max-width: 620px) {
 		.basic-article article {
-			bottom: 0;
+			transform: none;
 			padding: 30px 0;
+			margin-bottom: 0;
 		}
 	}
